Avoid adding top padding on mobile menu

--- a/app/assets/stylesheets/darkswarm/menu.css.sass
+++ b/app/assets/stylesheets/darkswarm/menu.css.sass
@@ -95,6 +95,9 @@ nav
     // padding required to placehold for fixed menu bar
     padding-top: $topbar-height
 @media screen and (max-width: 1025px)
+  body.off-canvas
+    // padding required to placehold for fixed menu bar
+    padding-top: 0
   section.right
     .nav-branded
       padding: 0 1em
